# Binary-Serialization-Engine

./: .gitignore  CMakeLists.txt  README.md
benchmark/: CMakeLists.txt  README.md  benchmark_compare.cpp  benchmark_latency.cpp  benchmark_stress.cpp  benchmark_trivial.cpp  common.hpp  helpers.hpp  naive_serializer.hpp
include/bin_serializer/: buffer.hpp  buffer_concept.hpp  deserializer.hpp  fixed_buffer.hpp  reflect.hpp  serializable.hpp  serializer.hpp
src/: buffer.cpp
tests/: CMakeLists.txt  README.md  test_fixedbuffer.cpp  test_rountrip_property.cpp  test_serialize_deserialize.cpp  test_string.cpp  test_trivial.cpp
